--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a{
     font-size: 24px;
     font-weight: 550;
 }
-li a, .hero-secondary{
+li a, .hero-secondary, .content li{
     font-size: 18px;
     color: #e5e7eb;
 }
@@ -67,4 +67,64 @@ button{
 .hero-secondary{
     width: 425px;
     margin-bottom: 10px;
+}
+.elm2{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 70px;
+    gap: 50px;
+}
+li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center;
+    width: 170px;
+}
+
+.content{
+    display: flex;
+    gap: 30px;
+}
+li img{
+    width: 160px;
+    height: 150px;
+    border-radius: 7px;
+    border: 3px solid #3882f6;
+}
+.elm2 div{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
+.content li{
+    font-size: 18px;
+    color: #1f2937;
+}
+.elm3{
+    display: flex;
+    flex-direction: column;
+    background-color: #e5e7eb;
+    align-items: center;
+    padding-top: 150px;
+    padding-bottom: 100px;
+}
+.quote{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1f2937;
+    width: 780px;
+}
+.author{
+    color: #1f2937;
+    font-weight: bold;
+    display: flex;
+    width: 700px;
+    justify-content: flex-end;
 }
